--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+
+        <!-- Javalin Version -->
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,6 +22,11 @@
         <hamcrest.version>2.0.0.0</hamcrest.version>
         <testcontainers.version>1.18.0</testcontainers.version>
         <hikari.version>5.1.0</hikari.version>
+        <javalin.version>6.3.0</javalin.version>
+        <postgresql.version>42.7.3</postgresql.version>
+        <logback.version>1.5.8</logback.version>
+        <slf4j.version>2.0.16</slf4j.version>
+        <restassured.version>5.5.0</restassured.version>
 
         <!-- DATABASE PROJECT NAME ON SERVER  -->
         <db.name>poemapi</db.name>
